# ros2_workshop

./: .gitignore  .gitmodules  README.md
dia_1/src/control_robot/: README.md
dia_1/src/control_robot/control_robot/: control_robot.py  control_robot_action.py  proportional_controller.py
dia_1/src/custom_interfaces/: package.xml
dia_1/src/custom_interfaces/action/: ToPose2D.action
dia_1/src/mi_primer_paquete/: README.md
dia_1/src/mi_primer_paquete/mi_primer_paquete/: listener.py  talker.py  talker_while.py
dia_1/src/move_robot/: README.md  setup.py
dia_1/src/move_robot/move_robot/: move_robot.py
dia_2/src/urdf_and_tf/: CMakeLists.txt
dia_2/src/urdf_and_tf/launch/: robot_description.launch.py
dia_2/urdf_and_tf/: package.xml
dia_2/urdf_and_tf/config/: config.rviz
dia_2/urdf_and_tf/urdf/: andino.urdf  transformer.urdf
docker/: build.sh  dockerfile  nueva_terminal.sh  requirements.txt  run.sh
src/1_mi_primer_paquete/: package.xml  setup.cfg  setup.py
src/1_mi_primer_paquete/mi_primer_paquete/: listener.py
src/2_move_robot/: package.xml  setup.py
src/2_move_robot/move_robot/: move_robot.py  move_robot_listener.py  move_robot_square.py
src/3_control_robot/: package.xml  setup.py
src/3_control_robot/control_robot/: control_robot.py  control_robot_action.py
src/4_urdf_and_tf/urdf/: ar4.urdf
src/6_nav2_config/: nav2_params.yaml
src/custom_interfaces/: CMakeLists.txt
