<?xml version="1.0"?>
<package format="3">
  <name>urdf_and_tf</name>
  <version>0.0.1</version>
  <description>
    urdf_and_tf
  </description>

  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>

  <license>Apache License 2.0</license>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <author>Franco Cipollone</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>andino_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
