<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>move_robot</name>
  <version>0.0.1</version>
  <description>
    move_robot
  </description>

  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>

  <license>Apache License 2.0</license>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <author>Franco Cipollone</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
